agrego index y css de nuevo proyecto para el tp1

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Daily News</title>
+    <title>~ Daily Paws News ~</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <h1>DAILY PAWS NEWS ~ DOG DAILY NEWS</h1>
+
+    <h2>EN ADOPCIÓN</h2>
+        <h3>Manchita</h3>
+        <p>Acá les presentamos a Manchita! Una cachorrita de 3 meses que busca hogar, es muy mimosa!</p>
+        <h3>Colita</h3>
+        <p>Colita tiene 5 meses y está buscando hogar! Es muy juguetón!</p>
+    <h2>EDUCACIÓN CANINA</h2>
+        <h3>Aprendiendo el SIT</h3>
+        <p>En es</p>
+        <h3>Aprendiendo el PLATZ</h3>
+
+    <h4>Este es el Daily Paws News ~ Año 20222 ~ Mar del Plata</h4>
+
 </body>
 </html>
