agrego links y dos páginas en web1html

--- a/web1html/index.html
+++ b/web1html/index.html
@@ -15,6 +15,8 @@
    Bienvenidos! Estoy aprendiendo HTML y CSS y para practicar voy poniendo todo acá. Este página podría ser como la Homer's Web Page, o como el meme de Graphic Design is my passion :D
    Holi :D
 
+    <a href="pruebadelink.html"> IR A LA PRUEBA DE LINK </a>
+
    <p class="texto_derecha"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati error laboriosam aperiam? Ipsa, perferendis dolores, quasi facilis debitis sapiente eveniet soluta recusandae, quidem eos eaque doloremque velit sint assumenda illum.</p>
    
    <img src="images/galgo.jpg" alt="una imagen de un galguito atigrado precioso">
@@ -72,5 +74,28 @@
    <p>16) Transcribir el código del ejercicio anterior para que funcione en su navegador local, con las correcciones realizadas y modificaciones que crea necesarias.</p>
    <p>17) En el proyecto de https://codepen.io/webUnicen/pen/bZQZgx, se ha escrito una parte del estilo css, pero ha quedado inconcluso. Escriba el archivo html y complete el estilo css para que la web se vea como lo muestra la siguiente captura del navegador:</p>
         <img src="IMAGES/imagendelpunto17.jpg" alt="es una imagen que muestra lo que hay que hacer">
+
+
+
+
+    <table>
+        <tr>
+            <td> NOMBRE </td>
+            <td> APELLIDO </td>
+        </tr>
+        <tr>
+            <td> JUAN </td>
+            <td> PEREZ </td>
+        </tr>
+    </table>
+
+    <form action="">
+        Nombre: <input type="text"  name="nombre" value="">
+        Password: <input type="password" name="pass" id="">
+        Sexo: <input type="radio" name="sexo" id="" value="masculino"> Masculino 
+        <input type="radio" name="sexo" id="" value="femenino"> Femenino
+        <input type="radio" name="sexo" id="" value="femenino"> Otro
+
+    </form>
 </body>
 </html>
