agrego la respuesta a algunos ejercicios en el index del web1html

--- a/web1html/index.html
+++ b/web1html/index.html
@@ -62,15 +62,15 @@
    <p>8) Confeccionar dos títulos de segundo nivel con los textos Noticias Políticas y Noticias Deportivas, en cada una de estas secciones definir dos titulares de tercer nivel con un párrafo cada una que funcionen como resumen de cada noticia. HECHO</p>
    <p>9) Agregar un titular de cuarto nivel con el pie de página del sitio que incluya el nombre del periódico y el año actual. HECHO</p>
    <p>10) Terminar de implementar las noticias del sitio web que viene realizando. Cada noticia completa debe cumplir las siguientes consignas.
-    Hacer una página diferente para cada una de las noticias.
-    Cada noticia debe tener el nombre del periódico y el pie de página al igual que la página principal.
-    Las noticias deben tener imágenes y al menos una debe tener una lista.
-    En alguna de las noticias que tengan varios párrafos, aplicar un estilo particular y diferente a solo uno de ellos.</p>
-   <p>11) Aplicar estilos al sitio para darle una imagen corporativa. Cada una de las páginas debe tener una imagen visual unificada. Asigne dentro del sitio colores a las fuentes, diversos  tipos de fuentes, tamaños y estilos de texto. Utilice tamaños relativos de fuentes  en las diferentes secciones del sitio.</p>
-   <p>12) Agregar a la pagina del periodico el formato de codificación de caracteres UTF-8 (8-bit Unicode Transformation Format).</p>
-   <p>13) Aplicar un estilo especial al texto que se encuentra en las listas.</p>
-   <p>14) El periódico decide cambiar su imagen corporativa con una renovación del estilo visual del diario. ¿Que sugiere al periódico que haga con su sitio web?. Si las noticias viejas también deben estar con el nuevo estilo  que les recomendaría hacer?</p>
-   <p>15) Reconocer errores y malas prácticas en el código escrito en https://codepen.io/webUnicen/pen/moGWQr</p>
+    Hacer una página diferente para cada una de las noticias. HECHO
+    Cada noticia debe tener el nombre del periódico y el pie de página al igual que la página principal. HECHO
+    Las noticias deben tener imágenes y al menos una debe tener una lista. HECHO
+    En alguna de las noticias que tengan varios párrafos, aplicar un estilo particular y diferente a solo uno de ellos.</p> HECHO
+   <p>11) Aplicar estilos al sitio para darle una imagen corporativa. Cada una de las páginas debe tener una imagen visual unificada. Asigne dentro del sitio colores a las fuentes, diversos  tipos de fuentes, tamaños y estilos de texto. Utilice tamaños relativos de fuentes  en las diferentes secciones del sitio. HECHO</p>
+   <p>12) Agregar a la pagina del periodico el formato de codificación de caracteres UTF-8 (8-bit Unicode Transformation Format). HECHO</p>
+   <p>13) Aplicar un estilo especial al texto que se encuentra en las listas. HECHO</p>
+   <p>14) El periódico decide cambiar su imagen corporativa con una renovación del estilo visual del diario. ¿Que sugiere al periódico que haga con su sitio web?. Si las noticias viejas también deben estar con el nuevo estilo  que les recomendaría hacer? Le sugeriría cambiar directamente el css</p>
+   <p>15) Reconocer errores y malas prácticas en el código escrito en https://codepen.io/webUnicen/pen/moGWQr .....Para empezar pone un estilo en el head, eso no se hace, hayque ponerlo en el css. No tiene body. Pone los estilos dentro de los titulos en lugar de ponerlos en el css. En el css pone un estilo para el body que no existe jaja. </p>
    <p>16) Transcribir el código del ejercicio anterior para que funcione en su navegador local, con las correcciones realizadas y modificaciones que crea necesarias.</p>
    <p>17) En el proyecto de https://codepen.io/webUnicen/pen/bZQZgx, se ha escrito una parte del estilo css, pero ha quedado inconcluso. Escriba el archivo html y complete el estilo css para que la web se vea como lo muestra la siguiente captura del navegador:</p>
         <img src="IMAGES/imagendelpunto17.jpg" alt="es una imagen que muestra lo que hay que hacer">
