agrego el tp1 sobre corregir otro html que estaba mal porque QA se nace no se hace

--- a/tp1periodico/aprendiendo-el-platz.html
+++ b/tp1periodico/aprendiendo-el-platz.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>DAILY PAWS NEWS ~ DOG DAILY NEWS</h1>
+    <img src="images/logo.jpg" alt="">
+    <a href="index.html"> VOLER </a>
+
     <h2>Aprendiendo a acostarse! Como enseñar el PLATZ a un perro</h2>
     <img src="images/platzPortada.jpg" alt="En la foto se aprecia un galguito de perfil mirando a la izquierda en la posición de echado. El galguito es color gris atigrado y blanco, tiene puesto un pretal estilo acolchado color negro y un collar estilo martingale color celeste. está en el pasto de lo que parece un parque o un campo. Hacia la izquierda a donde está mirando, hay una persona de frente a él con una mano estirada hacia el piso indicándole que debe permanecer en esa posición">
    
