--- a/tp1periodico/aprendiendo-el-sit.html
+++ b/tp1periodico/aprendiendo-el-sit.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>DAILY PAWS NEWS ~ DOG DAILY NEWS</h1>
+    <img src="images/logo.jpg" alt="">
+    <a href="index.html"> VOLER </a>
+
     <h2>Aprendiendo a sentarse! Como enseñar el SIT a un perro</h2>
     <img src="images/sitPortada.jpg" alt="En la imagen se observa a una chica en un prado rodeada de 6 perros, todos sentados mirandola atentamente">
     
