--- a/tp1periodico/wendy-en-adopcion.html
+++ b/tp1periodico/wendy-en-adopcion.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>DAILY PAWS NEWS ~ DOG DAILY NEWS</h1>
+    <img src="images/logo.jpg" alt="">
+    <a href="index.html"> VOLER </a>
+
     <h2> WENDY EN ADOPCIÓN!!! </h2>
     <img src="images/Wendy.jpg" alt="En la foto se puede apreciar a Wendy, una cachorrita de tres colores: negra, blanca y marrón, sentada en el pasto mirando hacia la persona que saca la foto sin comprender la situación.">
    
