--- a/tp1periodico/zuri-en-adopcion.html
+++ b/tp1periodico/zuri-en-adopcion.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>DAILY PAWS NEWS ~ DOG DAILY NEWS</h1>
+    <img src="images/logo.jpg" alt="">
+    <a href="index.html"> VOLER </a>
+
     <h2> ZURI EN ADOPCIÓN!!! </h2>
     <img src="images/Zuri.jpg" alt="Foto de Zuri, una cachorrita negra preciosa con unos ojitos muy tiernos. En la foto Zuri tiene un pañuelito beige más grande que ella jaja">
     
