agrego el js en web1 y agrego divs en el tp1

--- a/web1html/index.html
+++ b/web1html/index.html
@@ -97,5 +97,8 @@
         <input type="radio" name="sexo" id="" value="femenino"> Otro
 
     </form>
+
+    <script type="text/javascript" src="JS/saludo.js"></script>
+    
 </body>
 </html>
