--- a/web1html/index.html
+++ b/web1html/index.html
@@ -12,10 +12,10 @@
    
     <h1 class="mayuscula texto_centro">~ título ~</h1> 
    
-   Bienvenidos! Estoy aprendiendo HTML y CSS y para practicar voy poniendo todo acá. Este página podría ser como la Homer's Web Page, o como el meme de Graphic Design is my passion :D
-   Holi :D
+   <p class="para_abajo"> Bienvenidos! Estoy aprendiendo HTML y CSS y para practicar voy poniendo todo acá. Este página podría ser como la Homer's Web Page, o como el meme de Graphic Design is my passion :D
+   Holi :D</p>
 
-    <a href="pruebadelink.html"> IR A LA PRUEBA DE LINK </a>
+    <a class="para_abajo" href="pruebadelink.html"> IR A LA PRUEBA DE LINK </a>
 
    <p class="texto_derecha"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati error laboriosam aperiam? Ipsa, perferendis dolores, quasi facilis debitis sapiente eveniet soluta recusandae, quidem eos eaque doloremque velit sint assumenda illum.</p>
    
@@ -73,12 +73,15 @@
    <p>15) Reconocer errores y malas prácticas en el código escrito en https://codepen.io/webUnicen/pen/moGWQr .....Para empezar pone un estilo en el head, eso no se hace, hayque ponerlo en el css. No tiene body. Pone los estilos dentro de los titulos en lugar de ponerlos en el css. En el css pone un estilo para el body que no existe jaja. </p>
    <p>16) Transcribir el código del ejercicio anterior para que funcione en su navegador local, con las correcciones realizadas y modificaciones que crea necesarias.</p>
    <p>17) En el proyecto de https://codepen.io/webUnicen/pen/bZQZgx, se ha escrito una parte del estilo css, pero ha quedado inconcluso. Escriba el archivo html y complete el estilo css para que la web se vea como lo muestra la siguiente captura del navegador:</p>
-        <img src="IMAGES/imagendelpunto17.jpg" alt="es una imagen que muestra lo que hay que hacer">
+   <img src="IMAGES/imagendelpunto17.jpg" alt="es una imagen que muestra lo que hay que hacer">
 
 
+    <br>
+    <br>
+    <br>
+    <br>
 
-
-    <table>
+    <table class="para_abajo">
         <tr>
             <td> NOMBRE </td>
             <td> APELLIDO </td>
@@ -88,8 +91,10 @@
             <td> PEREZ </td>
         </tr>
     </table>
+    <br>
+    <br>
 
-    <form action="">
+    <form class="para_abajo" action="">
         Nombre: <input type="text"  name="nombre" value="">
         Password: <input type="password" name="pass" id="">
         Sexo: <input type="radio" name="sexo" id="" value="masculino"> Masculino 
@@ -99,6 +104,23 @@
     </form>
 
     <script type="text/javascript" src="JS/saludo.js"></script>
+    <br>
+    <div class="para_abajo">
+        <br>
+        <a href="saludo-dom.html"> IR A SALUDO-DOM</a>
+        <br>
+        <a href="saludo-evento.html"> IR A SALUDO EVENTO</a>
+        <br>
+        <a href="contarclicks.html"> IR AL CONTADOR DE CLICKS</a>
+        <br>
+        <a href="lampara.html">LA LAMPARA</a>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>    
     
+
 </body>
 </html>
