edito los nombres de las carpetas para que esten todos en minusculas

--- a/web1html/contarclicks.html
+++ b/web1html/contarclicks.html
@@ -9,7 +9,7 @@
 <body>
     <button onclick="contarClicks();"> Contar Clicks</button>
     <p id="mensaje"> Se hicieron <span id="cuenta" >0</span> clicks </p>
-    <script src="JS/contarclicks.js"></script>
+    <script src="js/contarclicks.js"></script>
     <a href="index.html"> VOLVER AL INDEX</a>
 </body>
 </html>
