--- a/web1html/lampara.html
+++ b/web1html/lampara.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prende y Apaga</title>
-    <link rel="stylesheet" href="CSS/lampara.css">
+    <link rel="stylesheet" href="css/lampara.css">
 </head>
 
 <body id="fondo">
@@ -14,9 +14,9 @@
         <button id="boton-prender">Prender</button>
         <button id="boton-apagar">Apagar</button>
     </div>
-    <img id="imagen-lampara" src="IMAGES/apagada.png" alt="lampara apagada">
+    <img id="imagen-lampara" src="images/apagada.png" alt="lampara apagada">
     
-    <script src="JS/lampara.js"></script>
+    <script src="js/lampara.js"></script>
     <a href="index.html">VOLVER</a>
       
 </body>
