--- a/web1html/saludo-dom.html
+++ b/web1html/saludo-dom.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p id="saludo">Hola Web!</p>
-    <script type="text/javascript" src="JS/saludodom.js"></script>
+    <script type="text/javascript" src="js/saludodom.js"></script>
     <a href="index.html"> VOLVER AL INDEX</a>
 </body>
 </html>
