--- a/web1html/saludo-evento.html
+++ b/web1html/saludo-evento.html
@@ -10,7 +10,7 @@
     <input id="nombre" type="text">
     <button onclick="saludarCatedra();"> Saludar Cátedra </button>
     <p id="saludo"></p>
-    <script src="JS/saludoevento.js"></script>
+    <script src="js/saludoevento.js"></script>
     <a href="index.html"> VOLVER AL INDEX</a>
 </body>
 </html>
