--- a/web1html/index.html
+++ b/web1html/index.html
@@ -73,7 +73,7 @@
    <p>15) Reconocer errores y malas prácticas en el código escrito en https://codepen.io/webUnicen/pen/moGWQr .....Para empezar pone un estilo en el head, eso no se hace, hayque ponerlo en el css. No tiene body. Pone los estilos dentro de los titulos en lugar de ponerlos en el css. En el css pone un estilo para el body que no existe jaja. </p>
    <p>16) Transcribir el código del ejercicio anterior para que funcione en su navegador local, con las correcciones realizadas y modificaciones que crea necesarias.</p>
    <p>17) En el proyecto de https://codepen.io/webUnicen/pen/bZQZgx, se ha escrito una parte del estilo css, pero ha quedado inconcluso. Escriba el archivo html y complete el estilo css para que la web se vea como lo muestra la siguiente captura del navegador:</p>
-   <img src="IMAGES/imagendelpunto17.jpg" alt="es una imagen que muestra lo que hay que hacer">
+   <img src="images/imagendelpunto17.jpg" alt="es una imagen que muestra lo que hay que hacer">
 
 
     <br>
@@ -103,7 +103,7 @@
 
     </form>
 
-    <script type="text/javascript" src="JS/saludo.js"></script>
+    <script type="text/javascript" src="js/saludo.js"></script>
     <br>
     <div class="para_abajo">
         <br>
