agrego la prueba de responsive y edito el css del periódico

--- a/web1html/index.html
+++ b/web1html/index.html
@@ -17,6 +17,8 @@
 
     <a class="para_abajo" href="pruebadelink.html"> IR A LA PRUEBA DE LINK </a>
 
+    <a class="para_abajo" href="prueba-responsive.html">IR A LA PRUEBA RESPONSIVE</a>
+
    <p class="texto_derecha"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati error laboriosam aperiam? Ipsa, perferendis dolores, quasi facilis debitis sapiente eveniet soluta recusandae, quidem eos eaque doloremque velit sint assumenda illum.</p>
    
    <img src="images/galgo.jpg" alt="una imagen de un galguito atigrado precioso">
