--- a/web1html/prueba-responsive.html
+++ b/web1html/prueba-responsive.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="css/index.css"> 
 </head>
 <body>
-    <div class="color-div">
-        
-    </div>
+    <header class="color-div">
+        <div class="boton_menu"><a>MENÚ</a></div>
+        <ul class="header menuDesplegado">
+            <li>Cosa 1</li>
+            <li>Cosa 2</li>
+            <li>Cosa 3</li>
+            <li>Cosa 4</li>
+            <li>Cosa 5</li>
+        </ul>
+    </header>
 
     <div class="middle-wraper">
         <div class="color-div2">
@@ -24,6 +31,6 @@
     <div class="color-div4">
         
     </div>
-
+    <script src="js/togglemenu.js"></script>
 </body>
 </html>
