--- a/piedraPapelTijeraLagartoSpock/index.html
+++ b/piedraPapelTijeraLagartoSpock/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
+    <title>Piedra Papel Tijera</title>
 </head>
 <body>
-    
+    <div class="container">
+        <button id="boton-play">JUGAR</button>
+        <div class="result">
+
+        </div>
+    </div>
+    <script src="js/piedrapapeltijera.js"></script>
 </body>
 </html>
