trabajando en el piedra papel tijera lagarto spock

--- a/piedraPapelTijeraLagartoSpock/index.html
+++ b/piedraPapelTijeraLagartoSpock/index.html
@@ -22,6 +22,7 @@
         <div class="container">
             <form action="">
                 <label for=""> ELIJA SU OPCION </label>
+                <p class="choice-eleccion">   </p>
                 <select name="" id="choice">
                     <option value="0">PIEDRA</option>
                     <option value="1">PAPEL</option>
@@ -29,7 +30,6 @@
                     <option value="3">LAGARTO</option>
                     <option value="4">SPOCK</option>
                 </select>
-                <button id="boton-elegir"> ELEGIR </button>
             </form>
             
             <div class="result eleccion">
