agrego el ejercicio de los equipos de futbol

--- a/web1html/contarclicks.html
+++ b/web1html/contarclicks.html
@@ -11,5 +11,11 @@
     <p id="mensaje"> Se hicieron <span id="cuenta" >0</span> clicks </p>
     <script src="js/contarclicks.js"></script>
     <a href="index.html"> VOLVER AL INDEX</a>
+
+    <div id="resultado"> </div>
+
+    <button class="contar-p"> CONTAR LOS P </button>
+    <button> OTRO BOTON </button>
+    <button> OTRO MAS </button>
 </body>
 </html>
